[package]
name = "znotify-cli"
version = "0.2.0"
edition = "2021"
description = "Send notification to ZNotify server"
authors = ["Zxilly <zxilly@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ZNotify/cli"
repository = "https://github.com/ZNotify/cli"
categories = ["command-line-interface"]
build = "build.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive", "cargo", "std"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
znotify = "0.2.0"
dirs = "5.0.1"
toml_edit = { version = "0.22.14", features = ["serde"] }
self_update = "0.40.0"
async-trait = "0.1.80"
shadow-rs = "0.29.0"
clap_complete = "4.5.6"

[build-dependencies]
shadow-rs = "0.29.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }


[profile.release]
lto = true
opt-level = 3

[[bin]]
name = "znotify"
path = "src/main.rs"

[package.metadata.deb]
section = "utility"
priority = "optional"
license-file = ["LICENSE", "4"]
assets = [
    ["target/release/znotify", "usr/bin/znotify", "755"],
    ["README.md", "usr/share/doc/znotify/README", "644"],
]
